<resources>
<string name="CardEditorCancelButton">Cancel</string>
<string name="CardEditorSaveButton">Save</string>
<string name="CardEditorTags">Tags: %1$s</string>
<string name="add_new_tag">Add new tag</string>
<string name="app_name">AnkiDroid</string>
<string name="yes">Yes</string>
<string name="no">No</string>
<string name="ok">OK</string>
<string name="dont_show_again">Don\'t show again</string>
<string name="deck_upgrade_too_old_version">Decks with versions older than 39 are not supported by AnkiDroid; please open the deck with Anki desktop to upgrade it to the latest version.</string>
<string name="deck_upgrade_version_61_has_latex">The deck can\'t be fully upgraded, because it contains LaTeX expressions; please open the deck with Anki desktop to upgrade it to the latest version and regenerate LaTeX.</string>
<plurals name="deckpicker_title">
  <item quantity="one">All decks: 1 of %2$d due (%3$s)</item>
  <item quantity="other">All decks: %1$d of %2$d due (%3$s)</item>
</plurals>
<plurals name="deckpicker_title_minutes">
  <item quantity="one">1 min.</item>
  <item quantity="other">%d min.</item>
</plurals>
<string name="deckpicker_title_nosdcard">SD card is unmounted</string>
<plurals name="deckpicker_due">
  <item quantity="one">1 of %2$d due</item>
  <item quantity="other">%1$d of %2$d due</item>
</plurals>
<string name="deckpicker_new">%d new today</string>
<string name="deckpicker_loaddeck">Loading deck...</string>
<string name="deckpicker_nodeck">No decks found.</string>
<string name="sync_log_title">Sync Log</string>
<string name="deckpicker_upgrading">Upgrading deck...</string>
<string name="deckpicker_upgrade_failed">Upgrading failed!</string>
<string name="deckpicker_upgrade_notes_title">Upgrade deck results</string>
<string name="deckpicker_upgrade_notes_button">Notes</string>
<string name="deckpicker_download_missing_title">Fetching missing media</string>
<string name="deckpicker_download_missing_none">No media files found missing</string>
<string name="deckpicker_download_missing_success">Successfully retrieved %1$d, missing %2$d</string>
<string name="deckpicker_download_missing_error">Error with file: %1$s</string>
<string name="swap_qa_title">Swap Q/A</string>
<string name="swap_qa_text">Be aware that simply swapping question and answer runs contrary to the concept of spaced repetition. Ideally you should create new cards for the reversed learning direction. You can do this easily with Anki Desktop.\nSwap Q/A anyway?</string>
<string name="notify_ticker">Application Update</string>
<string name="notify_title">AnkiDroid Updated</string>
<string name="notify_message">Download a new version</string>
<string name="notification_title">Confirm AnkiDroid Update</string>
<string name="notification_message">A new version of AnkiDroid is available in Android Market.\n\nWould you like to install it?</string>
<string name="notification_stop">Don\'t notify me of this update again</string>
<string name="sdcard_missing_message">SD card is unavailable because it is being used as USB storage. Disconnect USB to access your decks.</string>
<string name="show_whiteboard">Show Whiteboard</string>
<string name="hide_whiteboard">Hide Whiteboard</string>
<string name="clear_whiteboard">Clear Whiteboard</string>
<string name="session_question_limit_reached">Session question limit reached</string>
<string name="session_time_limit_reached">Session time limit reached</string>
<string name="cram_edit_warning">Card editing not allowed while cramming</string>
<string name="suspend_leeches">Suspend Leeches</string>
<string name="leech_suspend_notification">Card marked as leech and suspended</string>
<string name="leech_notification">Card marked as leech</string>
<plurals name="reviewer_window_title">
  <item quantity="one">%1$s (1 min. left)</item>
  <item quantity="other">%1$s (%2$d min. left)</item>
</plurals>
<string name="newcards_day_summ">The maximum number of new cards shown per day.</string>
<string name="newcards_day">New Cards / Day</string>
<string name="studyoptions_limit_select_tags">Select Tags</string>
<string name="studyoptions_limit_tags_active">With: %1$s</string>
<string name="studyoptions_limit_tags_inactive">Without: %1$s</string>
<string name="studyoptions_limit_button_text">Limit</string>
<string name="studyoptions_limit_dialog_title">Limit Learning</string>
<string name="studyoptions_session">Session</string>
<string name="studyoptions_tag">By Tag</string>
<string name="studyoptions_tag_new">Show new cards by tag:</string>
<string name="studyoptions_tag_rev">Show review cards by tag:</string>
<string name="studyoptions_session_minutes">Session limit (minutes):</string>
<string name="studyoptions_session_questions">Session limit (questions):</string>
<string name="session_time_limit">Session Time Limit</string>
<string name="session_time_limit_summ">The number of minutes in a session. Choose 0 for no limit.</string>
<string name="session_question_limit">Session Question Limit</string>
<string name="session_question_limit_summ">The number of questions in a session. Choose 0 for no limit.</string>
<string name="new_cards_order">New Cards Order</string>
<string name="new_cards_order_summ">The order in which to show new cards.</string>
<string name="show_new_cards_in">Show new cards in...</string>
<string name="new_card_spacing">New Card Spacing</string>
<string name="new_card_spacing_summ">Where to distribute new cards during the review.</string>
<string name="show_new_cards">Show new cards...</string>
<string name="pref_cat_decks">Decks</string>
<string name="pref_cat_qadisplay">Display</string>
<string name="pref_cat_experimental">EXPERIMENTAL</string>
<string name="show_study_options_on_deck_load">Study options on load</string>
<string name="show_study_options_on_deck_load_summ">Shows study options screen when loading a deck</string>
<string name="startup_mode">Startup Mode</string>
<string name="startup_mode_summ">Choose if you want to start with study options or deck picker:</string>
<string name="show_timer">Show timer</string>
<string name="show_timer_summ">Timer showing the time it is taking you to answer</string>
<string name="show_whiteboard_summ">Lets you write on the screen</string>
<string name="whiteboard_stroke_width">Whiteboard stroke width</string>
<string name="whiteboard_stroke_width_summ">Width of the stroke: XXX</string>
<string name="write_answers">Write answers</string>
<string name="write_answers_summ">Lets you write the answer and compare it with the correct one</string>
<string name="text_selection">Allow text selection</string>
<string name="text_selection_summ">Lets you select and copy text from cards (by menu or long click) in order to perform lookups in an external dictionary</string>
<string name="dictionary">Dictionary</string>
<string name="dictionary_summ">Dictionary in which lookups should be performed: XXX</string>
<string name="use_ruby_support">Provide ruby annotation support</string>
<string name="use_ruby_support_summ">If the characters \'[\' and \']\' are found, then the enclosed text is handled as a ruby annotation</string>
<string name="display_font_size">Relative display font size</string>
<string name="display_font_size_summ">The font size to use in the display relative to the definitions in the deck. At the moment: XXX %</string>
<string name="button_size">Relative button size</string>
<string name="button_size_summ">Relative size of the buttons on the reviewing screen. At the moment: XXX %</string>
<string name="hide_question_in_answer">Hide question in answer?</string>
<string name="hide_question_in_answer_summ">Determines whether the question should be hidden when the answer is shown</string>
<string name="deck_path">Deck path</string>
<string name="deck_path_summ">Path to where your decks are stored</string>
<string name="fullscreen_review">Review in fullscreen</string>
<string name="fullscreen_review_summ">You can decide if you want to use all available screen space during card reviewing</string>
<string name="zoom">Enable Zoom</string>
<string name="zoom_summ">Show zoom controls when reviewing</string>
<string name="swipe">Enable Gestures</string>
<string name="swipe_summ_off">Use gestures to switch between screens and answer cards. This option is not compatible with zoom controls</string>
<string name="swipe_summ_on">Swipe horizontally to switch between screens. Configure other actions below</string>
<string name="shake_intensity">Shake threshold</string>
<string name="shake_intensity_summ">Threshold for shake recognition: XXX</string>
<string name="fix_hebrew_text">Enforce RTL for Hebrew</string>
<string name="fix_hebrew_text_summ">Workaround for limited support of Hebrew by Android platform. Doesn\'t support vowels.</string>
<string name="downloaddeck_search">Search</string>
<string name="card_browser">Card Browser</string>
<string name="card_browser_show_marked">Show marked cards</string>
<string name="card_browser_show_suspended">Show suspended cards</string>
<string name="card_browser_search_by_tag">Search by tag</string>
<string name="card_browser_change_display_order">Change display order</string>
<string name="statistics">Statistics</string>
<string name="cancel">Cancel</string>
<string name="studyoptions_title">Study Options</string>
<string name="studyoptions_deck_name">Deck name</string>
<string name="studyoptions_reviews_due">Reviews due:</string>
<string name="studyoptions_new_today">New today:</string>
<string name="studyoptions_new_total">New total:</string>
<string name="studyoptions_eta">Estimated time (min):</string>
<string name="studyoptions_start">Start Reviewing</string>
<string name="studyoptions_night_mode">Night Mode</string>
<string name="studyoptions_congrats_title">Congratulations!</string>
<plurals name="studyoptions_congrats_message">
  <item quantity="one">You have finished for now.\nTomorrow there will be:\n1 card to review and %2$s.\n Estimated time: %3$s</item>
  <item quantity="other">You have finished for now.\nTomorrow there will be:\n%1$d cards to review and %2$s.\n Estimated time: %3$s</item>
</plurals>
<string name="studyoptions_congrats_learnmore">Learn More</string>
<string name="studyoptions_congrats_reviewearly">Review Early</string>
<string name="studyoptions_congrats_open_other_deck">Open Other Deck</string>
<string name="studyoptions_congrats_finish">Back to Study Screen</string>
<string name="username">Username</string>
<string name="password">Password</string>
<string name="sign_up_description">Don\'t have an AnkiOnline account? It\'s free!</string>
<string name="sign_up">Sign up</string>
<string name="cram">Cram</string>
<string name="error_reporting_choice">Error reporting mode</string>
<string name="error_reporting_choice_summary">Errors can be reported automatically, never reported, or you can be prompted</string>
<string name="widget_pref">Widget</string>
<string name="widget_minimum_cards_due">Widget notification threshold</string>
<string name="widget_minimum_cards_due_summary">The minimum number of cards due at which a notification is raised: XXX</string>
<string name="widget_minimum_cards_due_vibrate">Vibrate</string>
<string name="widget_minimum_cards_due_blink">Blink light</string>
<string name="show_next_review_time">Next review time</string>
<string name="show_next_review_time_summ">Shows the next review time depending on your choice</string>
<string name="update_notification">Update notifications</string>
<string name="update_notification_summ">Notify me when AnkiDroid is updated</string>
<string name="contextmenu_deckpicker_download_missing_media">Download missing media</string>
<string name="contextmenu_deckpicker_reset_language_assignments">Reset Language Assignments</string>
<string name="contextmenu_deckpicker_optimize_deck">Optimize database</string>
<string name="contextmenu_deckpicker_delete_deck">Delete Deck</string>
<string name="contextmenu_deckpicker_remove_backups">Remove backups</string>
</resources>