<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/optimize_deck" 
	android:title="@string/contextmenu_deckpicker_optimize_deck"/>	
	<item android:id="@+id/set_custom_dictionary" 
	android:title="@string/contextmenu_deckpicker_set_custom_dictionary"/>
	<item android:id="@+id/download_missing_media" 
	android:title="@string/contextmenu_deckpicker_download_missing_media"/>
	<item android:id="@+id/reset_language" 
	android:title="@string/contextmenu_deckpicker_reset_language_assignments"/>
<!--	<item android:id="@+id/restore_backups" 
	android:title="@string/contextmenu_deckpicker_restore_backups"/>-->
	<item android:id="@+id/remove_backups" 
	android:title="@string/contextmenu_deckpicker_remove_backups"/>
	<item android:id="@+id/delete_deck" 
	android:title="@string/contextmenu_deckpicker_delete_deck"/>
</menu>
