<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:gravity="center"
	android:layout_width="wrap_content">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:textSize="26dip"
		android:textStyle="bold"
		android:textColor="#ffffff"
		android:text="@string/studyoptions_congrats_title"
		android:id="@+id/studyoptions_congrats_title" />
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:text="@string/studyoptions_congrats_message"
		android:layout_marginBottom="10dip"
		android:id="@+id/studyoptions_congrats_message" />
	<Button
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:id="@+id/studyoptions_congrats_open_other_deck"
		android:text="@string/studyoptions_congrats_open_other_deck" />
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:text=""
		android:layout_marginBottom="10dip" />
	<Button
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:id="@+id/studyoptions_congrats_finish"
		android:text="@string/studyoptions_congrats_finish" />
	<Button
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:id="@+id/studyoptions_congrats_learnmore"
		android:text="@string/studyoptions_congrats_learnmore" />
	<Button
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="center"
		android:id="@+id/studyoptions_congrats_reviewearly"
		android:text="@string/studyoptions_congrats_reviewearly" />
</LinearLayout>
