<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10px"
		android:gravity="center_vertical">
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/anki"/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			style="@android:style/TextAppearance.Large"/>
	</LinearLayout>
	<TextView
		android:layout_height="0px"
		android:layout_width="fill_parent"
		android:layout_margin="10px"
		android:layout_weight="1"
		android:text="@string/notification_message"
		style="@android:style/TextAppearance.Medium"/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button
			android:id="@+id/yes"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/yes"/>
		<Button
			android:id="@+id/no"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/no"/>
	</LinearLayout>	
	<CheckBox
		android:id="@+id/stop"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/notification_stop"/>
</LinearLayout>