<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:paddingRight="10dip"
	android:paddingLeft="10dip"
	android:gravity="center"
	android:orientation="vertical">
	
	<TextView android:id="@+id/studyoptions_deck_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dip"
		android:gravity="center"
		android:lines="2"
		android:ellipsize="end"
		android:text="@string/studyoptions_deck_name"
		android:textColor="#ffffff"
		android:textSize="26sp"
		android:textStyle="bold" />
		
	<TextView android:id="@+id/studyoptions_title"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/studyoptions_title"
		android:layout_marginBottom="15dip"
		android:textColor="#ffffff"
		android:textSize="26dip"
		android:textStyle="bold" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="15dip"
		android:gravity="center"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/studyoptions_reviews_due"
					android:textColor="#ffffff"/>
				<TextView android:id="@+id/studyoptions_reviews_due"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:gravity="right"
					android:text="99999"
					android:textColor="#ffffff"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/studyoptions_new_today"
					android:textColor="#ffffff"/>
				<TextView android:id="@+id/studyoptions_new_today"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:gravity="right"
					android:text="99999"
					android:textColor="#ffffff"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/studyoptions_new_total"
					android:textColor="#ffffff"/>
				<TextView android:id="@+id/studyoptions_new_total"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:gravity="right"
					android:text="99999"
					android:textColor="#ffffff"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/studyoptions_eta"
					android:textColor="#ffffff"/>
				<TextView android:id="@+id/studyoptions_eta"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dip"
					android:gravity="right"
					android:text="-"
					android:textColor="#ffffff"/>
			</LinearLayout>
		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="3"
			android:layout_marginLeft="4dip"
			android:text="@string/studyoptions_session_minutes"
			android:textSize="14dip"/>
		<EditText android:id="@+id/studyoptions_session_minutes"
			android:layout_width="0dip"
			android:layout_height="38dip"
			android:layout_weight="1"
			android:gravity="center"
			android:inputType="number"
			android:lines="1"
			android:text="10"
			android:textSize="14dip"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dip"
			android:layout_weight="3"
			android:text="@string/studyoptions_session_questions"
			android:textSize="14dip"/>
		<EditText android:id="@+id/studyoptions_session_questions"
			android:layout_width="0dip"
			android:layout_height="38dip"
			android:layout_weight="1"
			android:gravity="center"
			android:inputType="number"
			android:lines="1"
			android:text="30"
			android:textSize="14dip"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/studyoptions_start"
         	android:layout_height="fill_parent"
         	android:layout_width="0dip"
         	android:layout_weight="3"
         	android:layout_gravity="center"
			android:gravity="center"
			android:text="@string/studyoptions_start"
			android:drawableLeft="@drawable/chronometer"/>
		<ToggleButton android:id="@+id/studyoptions_cram"
         	android:layout_height="fill_parent"
         	android:layout_width="0dip"
         	android:layout_weight="1"
         	android:layout_gravity="center"
			android:gravity="center"
			android:textOff="@string/cram"
			android:textOn="@string/cram" 
			android:layout_marginBottom="1.5dip"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/studyoptions_statistics"
   	     	android:layout_height="fill_parent"
   	     	android:layout_width="0dip"
   	     	android:layout_weight="2"
			android:text="@string/statistics"/>
		<Button android:id="@+id/studyoptions_card_browser"
   	     	android:layout_height="fill_parent"
   	     	android:layout_width="0dip"
   	     	android:layout_weight="2"
			android:text="@string/card_browser"/>
	</LinearLayout>
	<CheckBox android:id="@+id/studyoptions_night_mode"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:text="@string/studyoptions_night_mode"
		android:textSize="14dip"/>
</LinearLayout>
