<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:padding="5dip"
  	android:orientation="vertical">
	<EditText 
		android:id="@+id/DeckCreatorFilename"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	  	android:layout_marginTop="5dp"
		android:lines="1"
		android:hint="@string/studyoptions_deck_name"/>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:orientation="horizontal"
		android:layout_marginTop="5dp"
		android:layout_gravity="right"
		android:id="@+id/CardEditorButtons">
		<Button android:layout_width="0dip"
			android:layout_height="fill_parent" 
			android:id="@+id/DeckCreatorOKButton"
			android:text="@string/ok"
			android:layout_gravity="center"
			android:gravity="center"
			android:layout_weight="1"/>
		<Button android:layout_width="0dip"
			android:layout_height="fill_parent" 
			android:id="@+id/DeckCreatorCancelButton"
			android:text="@string/cancel"
			android:layout_gravity="center"
			android:gravity="center"
			android:layout_weight="1"/>
	</LinearLayout>
</LinearLayout>
